# robot2024

./: .gitignore  .installer_config  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini  working_directories.py
src/: oi.py  physics.py  pyproject.toml  robot.py  robot_controller.py  simgui-window.json  test_refund.py
src/.wpilib/: wpilib_preferences.json
src/autonomous/: autonomous_drive_commands.py
src/commands/: arcade_drive_commands.py  arm_commands.py  autonomous_commands.py  autonomous_drive_commands.py  climber_commands.py  do_nothing.py  flipper_commands.py  grabber_commands.py  shooter_commands.py  tank_drive_commands.py  vacuum_commands.py  winch_commands.py
src/configs/: autonomous.ini  joysticks.ini  subsystems.ini
src/subsystems/: arm.py  climber.py  climbing.py  drivetrain.py  flipper.py  grabber.py  shooter.py  vacuum.py
src/util/: stopwatch.py
src/vision/: vision.py
tests/: pyfrc_test.py  test_climber.py  test_drive_time.py  test_drivetrain.py  test_oi.py  test_robot_controller.py  test_stopwatch.py  test_tank_drive.py  test_turbo_commands.py  test_turn_degrees.py  test_turn_degrees_absolute.py  test_turn_time.py
tests/test_configs/: autonomous_default.ini  drivetrain_3_4_speed.ini  drivetrain_channels_0_1.ini  drivetrain_channels_1_2.ini  drivetrain_default.ini  drivetrain_full_speed.ini  drivetrain_half_speed.ini  drivetrain_left_disabled.ini  drivetrain_left_inverted.ini  drivetrain_right_disabled.ini  drivetrain_right_inverted.ini  drivetrain_zero_speed.ini  joysticks_default.ini  joysticks_ports_0_1.ini  joysticks_ports_dead_zone_0.ini  joysticks_ports_dead_zone_0_1.ini  joysticks_ports_dead_zone_0_5.ini  subsystems_default.ini
