[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "team94_robot-2024"
authors = [
    { name = "Technojays", email = "team94frc@gmail.com" },
    { name = "Derelle Redmond" }
]
description = "Team 94: 2024 Technojays Robot Code"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["team94", "robotpy", "FIRST", "FRC"]
classifiers = [
    "Environment :: roboRIO",
    "Intended Audience :: Student Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "robotpy",
    "robotpy[commands2]",
    "robotpy[cscore]",
    "robotpy-wpimath",
    "robotpy-wpiutil",
    "pyfrc",
    "wpilib",
    "numpy",
]
dynamic = ["version"]

[tool.robotpy]
# Version of robotpy this project depends on
robotpy_version = "2024.3.2.1"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all"
    "apriltag",
    "commands2",
    "cscore",
    # "navx"
    # "pathplannerlib"
    # "phoenix5"
    # "phoenix6"
    # "playingwithfusion"
    "pyfrc",
    # "rev"
    # "romi"
    "sim",
    #"xrp"
]
requires = ["numpy"]